Add content and fix

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -4,9 +4,7 @@ const advice_link = "";
 ---
 
 <section>
-  <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 bg-gradient-to-r from-trakblu to-trakyellow md:from-trakblu md:via-trakyellow md:to-trakgreen"
-  >
+  <div class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 bg-gradient-to-r from-trakblu to-trakyellow md:from-trakblu  md:to-trakgreen">
     <div>
       <div class="text-center max-w-4xl mx-auto">
         <div class="sm:flex sm:justify-center">
@@ -40,7 +38,7 @@ const advice_link = "";
         >
         <a
           class="items-center justify-center h-12 font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
-          href="https://github.com/lcfd/trak"
+          href="/#getting-started"
           >Get Started &nbsp; &rarr;
         </a>
       </div>
