--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -1,8 +1,9 @@
-<section id="features">
+<section id="features" class="mt-24">
   <div
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
   >
-    <div class="mx-auto max-w-2xl text-center">
+    <div class="mx-auto max-w-2xl text-center relative">
+      <img class="absolute -top-40 md:-top-20 -right-0 md:-right-10 h-40 rotate-180" src="/dots.svg" alt="">
       <div>
         <p
           class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter"
@@ -82,6 +83,48 @@
               </div><div class="mt-4 text-gray-500 text-sm">
                 Get useful reports that help you organize yourself and
                 communicate better with your customers
+              </div>
+            </div>
+            <div>
+              <div>
+                <div
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
+                >
+                  <ion-icon
+                    aria-label="scan outline"
+                    class="hydrated md h-4 w-4"
+                    name="prism-outline"
+                    role="img"></ion-icon>
+                </div><p
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
+                >
+                  Projects
+                </p>
+              </div>
+              <div class="mt-4 text-gray-500 text-sm">
+                You can go freestyle and decide the project name for each session you record,
+                or you can create projects in the configuration file.
+              </div>
+            </div>
+            <div>
+              <div>
+                <div
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
+                >
+                  <ion-icon
+                    aria-label="scan outline"
+                    class="hydrated md h-4 w-4"
+                    name="code-outline"
+                    role="img"></ion-icon>
+                </div><p
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
+                >
+                  Dev mode
+                </p>
+              </div>
+              <div class="mt-4 text-gray-500 text-sm">
+                Development mode (dev) allows you to experiment with various features and 
+                develop without affecting your real data.
               </div>
             </div>
           </div>
