--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import { ViewTransitions } from 'astro:transitions';
 ---
 
 <html
@@ -8,6 +9,7 @@ import BaseHead from "../components/BaseHead.astro";
 >
   <head>
     <BaseHead />
+    <ViewTransitions />
   </head>
 
   <body class="bg-white">
