--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -20,8 +20,8 @@
         <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
           <a
             class="items-center h-12 justify-center font-medium rounded-xl text-black focus-visible:outline-white focus:outline-none inline-flex bg-white border-2 border-white duration-200 focus-visible:ring-black hover:bg-transparent hover:border-white/20 hover:text-white lg:w-auto px-6 py-3 text-center w-full"
-            href="https://github.com/lcfd/trak"
-            >Get Started &nbsp; &rarr;
+            href="/#getting-started">
+            Get Started &nbsp; &rarr;
           </a>
           <a
             class="items-center h-12 justify-center font-medium rounded-xl focus-visible:outline-white focus:outline-none inline-flex duration-200 text-white lg:w-auto px-6 py-3 text-center text-white/80 w-full"
