--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -1,7 +1,5 @@
 <section class="bg-gray-100">
-  <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24"
-  >
+  <div class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div class="max-w-2xl mx-auto md:text-center">
       <h2 class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
         What people say about Trak
@@ -17,18 +15,15 @@
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
                 <p class="text-base text-gray-500">
-                  I use Trak every day! It is essential to understand how
-                  projects are going and to be able to tell my clients how much
-                  time they have purchased they have left.
+                  I use trak every day! It's essential for me to understand how projects are going and to 
+                  be able to tell my clients how much time they have purchased is left.
                 </p>
               </blockquote>
               <figcaption
                 class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100"
               >
                 <div>
-                  <div
-                    class="text-lg font-semibold leading-6 text-black font-display"
-                  >
+                  <div class="text-lg font-semibold leading-6 text-black font-display">
                     Luca Fedrizzi
                   </div>
                   <div class="mt-1 text-sm text-gray-500">
