--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Navigation from "../components/global/Navigation.astro";
 
 import Hero from "../components/landing/Hero.astro";
 import SectionOne from "../components/landing/SectionOne.astro";
-// import SectionTwo from "../components/landing/SectionTwo.astro";
+import SectionTwo from "../components/landing/SectionTwo.astro";
 import Testimonial from "../components/global/Testimonial.astro";
 // import Pricing from "../components/landing/Pricing.astro";
 import Cta from "../components/global/Cta.astro";
@@ -54,7 +54,7 @@ Use AstroSeo in all the pages you want different Seo than the index page
   <Hero />
 
   <SectionOne />
-  <!-- <SectionTwo /> -->
+  <SectionTwo />
   <Testimonial />
   <!-- <Pricing /> -->
   <Cta />
