Add content to getting started

--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -1,13 +1,12 @@
 <section id="getting-started">
-  <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
+  <div class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
     <div class="mx-auto max-w-3xl lg:text-center relative">
       <img class="absolute -top-40 md:-top-20 left-0 md:-left-10 h-36 md:h-40" src="/dots.svg" alt="">
       <div>
         <p class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
           Getting started
         </p>
-        <p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">Install trak on your machine</p>
+        <p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500 mx-auto"><b>Install</b> trak on your machine</p>
       </div>
     </div>
     <div class="mx-auto pt-12">
@@ -110,5 +109,63 @@
         </div>
       </div>
     </div>
+    <div class="mx-auto max-w-3xl lg:text-center relative">
+      <div>
+        <p class="mt-20 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">Just two <b>commands</b> to start with</p>
+      </div>
+    </div>
+
+    <div class="mx-auto pt-12">
+      <div class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
+        <div>
+          <div class="gap-3 lg:inline-flex lg:items-center">
+            <div
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              <ion-icon
+                aria-label="scan outline"
+                class="hydrated md h-5 w-5"
+                name="play-circle-outline"
+                role="img"
+              />
+            </div>
+            <p class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
+              Start
+            </p>
+          </div>
+          <p class="text-gray-500 text-sm mt-4">
+            <span class="block mb-4">
+              Start a tracking session.
+            </span>
+            <code>
+              trak start your-project-id
+            </code>
+          </p>
+        </div>
+        <div>
+          <div class="gap-3 lg:inline-flex lg:items-center">
+            <div
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              <ion-icon
+                aria-label="scan outline"
+                class="hydrated md h-5 w-5"
+                name="stop-circle-outline"
+                role="img"
+              />
+            </div>
+            <p class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
+              Stop
+            </p>
+          </div>
+          <p class="text-gray-500 text-sm mt-4">
+            <span class="block mb-4">
+              Stop the current tracking session.
+            </span>
+            <code>
+              trak stop
+            </code>
+          </p>
+        </div>
+      <div>
+    <div>
   </div>
 </section>
