Format files and add basic devlog

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -75,7 +75,9 @@
       </div>
     </div>
     <div class="pt-12 text-center">
-      <p class="text-xs">All rights reserved 2023 Luca Fedrizzi P.IVA. IT02665860223</p>
+      <p class="text-xs">
+        All rights reserved 2023 Luca Fedrizzi P.IVA. IT02665860223
+      </p>
     </div>
   </div>
 </footer>
