--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -3,7 +3,11 @@
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
   >
     <div class="mx-auto max-w-2xl text-center relative">
-      <img class="absolute -top-40 md:-top-20 -right-0 md:-right-10 h-40 rotate-180" src="/dots.svg" alt="">
+      <img
+        class="absolute -top-40 md:-top-20 -right-0 md:-right-10 h-40 rotate-180"
+        src="/dots.svg"
+        alt=""
+      />
       <div>
         <p
           class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter"
@@ -102,8 +106,9 @@
                 </p>
               </div>
               <div class="mt-4 text-gray-500 text-sm">
-                You can go freestyle and decide the project name for each session you record,
-                or you can create projects in the configuration file.
+                You can go freestyle and decide the project name for each
+                session you record, or you can create projects in the
+                configuration file.
               </div>
             </div>
             <div>
@@ -123,8 +128,8 @@
                 </p>
               </div>
               <div class="mt-4 text-gray-500 text-sm">
-                Development mode (dev) allows you to experiment with various features and 
-                develop without affecting your real data.
+                Development mode (dev) allows you to experiment with various
+                features and develop without affecting your real data.
               </div>
             </div>
           </div>
