--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -4,7 +4,9 @@ const advice_link = "";
 ---
 
 <section>
-  <div class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 bg-gradient-to-r from-trakblu to-trakyellow md:from-trakblu  md:to-trakgreen">
+  <div
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 bg-gradient-to-r from-trakblu to-trakyellow md:from-trakblu md:to-trakgreen"
+  >
     <div>
       <div class="text-center max-w-4xl mx-auto">
         <div class="sm:flex sm:justify-center">
