--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -1,29 +1,42 @@
 <section id="getting-started">
-  <div class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
+  <div
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
+  >
     <div class="mx-auto max-w-3xl lg:text-center relative">
-      <img class="absolute -top-40 md:-top-20 left-0 md:-left-10 h-36 md:h-40" src="/dots.svg" alt="">
+      <img
+        class="absolute -top-40 md:-top-20 left-0 md:-left-10 h-36 md:h-40"
+        src="/dots.svg"
+        alt=""
+      />
       <div>
-        <p class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
+        <p
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter"
+        >
           Getting started
         </p>
-        <p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500 mx-auto"><b>Install</b> trak on your machine</p>
+        <p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">
+          <b>Install</b> trak on your machine
+        </p>
       </div>
     </div>
     <div class="mx-auto pt-12">
       <div
-        class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
+        class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3"
+      >
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
+            >
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
                 name="star-outline"
-                role="img"
-              />
+                role="img"></ion-icon>
             </div>
-            <p class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
+            <p
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
+            >
               pipx
             </p>
           </div>
@@ -31,44 +44,46 @@
             <span class="block mb-4">
               The currently recommended way to use it on your computer.
             </span>
-            <code>
-              pipx install trakcli
-            </code>
+            <code> pipx install trakcli</code>
           </p>
         </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
+            >
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
                 name="cube-outline"
-                role="img"
-              />
+                role="img"></ion-icon>
             </div>
-            <p class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">pip</p>
+            <p
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
+            >
+              pip
+            </p>
           </div>
           <p class="text-gray-500 text-sm mt-4">
             <span class="block mb-4">
               For Python developers who want to install trak in a virtualenv.
             </span>
-            <code>
-              pip install trakcli
-            </code>
+            <code> pip install trakcli</code>
           </p>
         </div>
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
+            >
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
                 name="snow-outline"
-                role="img"
-              />
+                role="img"></ion-icon>
             </div>
-            <p class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
+            <p
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
+            >
               Nix
             </p>
           </div>
@@ -76,32 +91,34 @@
             <span class="block mb-4">
               If you have Nix installed and flakes enabled.
             </span>
-            <code>
-              nix run github:lcfd/trak
-            </code>
+            <code> nix run github:lcfd/trak</code>
           </p>
         </div>
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
+            >
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
                 name="beer-outline"
-                role="img"
-              />
+                role="img"></ion-icon>
             </div>
-            <p class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
+            <p
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
+            >
               Brew
             </p>
           </div>
           <p class="text-gray-500 text-sm mt-4">
-            <span class="block mb-4">
-              TBA
-            </span>
+            <span class="block mb-4"> TBA</span>
             <span class="block">
-              <a class="underline" target="_blank" href="https://github.com/lcfd/trak/issues/14">
+              <a
+                class="underline"
+                target="_blank"
+                href="https://github.com/lcfd/trak/issues/14"
+              >
                 Contributions are welcome! 🙏
               </a>
             </span>
@@ -111,61 +128,64 @@
     </div>
     <div class="mx-auto max-w-3xl lg:text-center relative">
       <div>
-        <p class="mt-20 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">Just two <b>commands</b> to start with</p>
+        <p class="mt-20 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">
+          Just two <b>commands</b> to start with
+        </p>
       </div>
     </div>
 
     <div class="mx-auto pt-12">
-      <div class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
+      <div
+        class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3"
+      >
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
+            >
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
                 name="play-circle-outline"
-                role="img"
-              />
+                role="img"></ion-icon>
             </div>
-            <p class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
+            <p
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
+            >
               Start
             </p>
           </div>
           <p class="text-gray-500 text-sm mt-4">
-            <span class="block mb-4">
-              Start a tracking session.
-            </span>
-            <code>
-              trak start your-project-id
-            </code>
+            <span class="block mb-4"> Start a tracking session.</span>
+            <code> trak start your-project-id</code>
           </p>
         </div>
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
+            >
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
                 name="stop-circle-outline"
-                role="img"
-              />
+                role="img"></ion-icon>
             </div>
-            <p class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
+            <p
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
+            >
               Stop
             </p>
           </div>
           <p class="text-gray-500 text-sm mt-4">
-            <span class="block mb-4">
-              Stop the current tracking session.
-            </span>
-            <code>
-              trak stop
-            </code>
+            <span class="block mb-4"> Stop the current tracking session.</span>
+            <code> trak stop</code>
           </p>
         </div>
-      <div>
-    <div>
+        <div>
+          <div></div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
