Add bracketSameLine and content

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -1,7 +1,6 @@
 <footer>
   <div
-    class="items-center px-8 mx-auto py-12 gh:py-24 md:px-12 lg:px-16 xl:px-36 2xl:max-w-7xl"
-  >
+    class="items-center px-8 mx-auto py-12 gh:py-24 md:px-12 lg:px-16 xl:px-36 2xl:max-w-7xl">
     <div class="grid grid-cols-2 gap-8 border-y py-12 xl:col-span-3">
       <div class="md:grid md:grid-cols-2 md:gap-8">
         <div>
@@ -39,8 +38,7 @@
             <li>
               <a
                 href="https://github.com/lcfd/trak"
-                class="text-xs text-gray-400 hover:text-black"
-              >
+                class="text-xs text-gray-400 hover:text-black">
                 The code
               </a>
             </li>
@@ -57,16 +55,14 @@
             <li>
               <a
                 href="https://x.com/usetrakcom"
-                class="text-xs text-gray-400 hover:text-black"
-              >
+                class="text-xs text-gray-400 hover:text-black">
                 @usetrakcom
               </a>
             </li>
             <li>
               <a
                 href="https://x.com/lc_fd"
-                class="text-xs text-gray-400 hover:text-black"
-              >
+                class="text-xs text-gray-400 hover:text-black">
                 @lc_fd
               </a>
             </li>
