--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,8 +5,7 @@ import { ViewTransitions } from "astro:transitions";
 
 <html
   lang="en"
-  class="scroll-smooth selection:bg-trakyellow no-touchevents hydrated"
->
+  class="scroll-smooth selection:bg-trakyellow no-touchevents hydrated">
   <head>
     <BaseHead />
     <ViewTransitions />
