--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -1,16 +1,14 @@
 <section
   class="relative mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24"
   id="bundle"
-  aria-label="bundle"
->
+  aria-label="bundle">
   <div class="bg-black rounded-3xl overflow-hidden mx-auto">
     <div class="relative px-4 py-12 mx-auto max-w-7xl sm:px-6 md:px-4">
       <div class="grid items-end text-center">
         <div>
           <span class="text-white">Trak</span>
           <h2
-            class="w-full mt-4 text-4xl font-semibold tracking-tight text-white font-display lg:text-5xl"
-          >
+            class="w-full mt-4 text-4xl font-semibold tracking-tight text-white font-display lg:text-5xl">
             Your next <span class="lg:block">time traker.</span>
           </h2>
           <p class="max-w-2xl mx-auto mt-8 text-white/80 lg:text-xl">
@@ -20,8 +18,7 @@
         <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
           <a
             class="items-center h-12 justify-center font-medium rounded-xl text-black focus-visible:outline-white focus:outline-none inline-flex bg-white border-2 border-white duration-200 focus-visible:ring-black hover:bg-transparent hover:border-white/20 hover:text-white lg:w-auto px-6 py-3 text-center w-full"
-            href="/#getting-started"
-          >
+            href="/#getting-started">
             Get Started &nbsp; &rarr;
           </a>
           <a
