--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -1,7 +1,6 @@
 <section class="bg-gray-100">
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24"
-  >
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div class="max-w-2xl mx-auto md:text-center">
       <h2 class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
         What people say about Trak
@@ -9,26 +8,23 @@
     </div>
     <ul
       role="list"
-      class="grid max-w-2xl grid-cols-1 gap-6 mx-auto mt-16 sm:gap-8 lg:mt-20 lg:max-w-none lg:grid-cols-3"
-    >
+      class="grid max-w-2xl grid-cols-1 gap-6 mx-auto mt-16 sm:gap-8 lg:mt-20 lg:max-w-none lg:grid-cols-3">
       <li>
         <ul role="list" class="flex flex-col gap-y-6 sm:gap-y-8">
           <li>
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
                 <p class="text-base text-gray-500">
-                  I use trak every day! It's essential for me to understand how
-                  projects are going and to be able to tell my clients how much
-                  time they have purchased is left.
+                  I use trak every day! It's essential to understand how
+                  projects are going. In a second I'm able to tell my clients
+                  how much time I've used for their tasks. That's awesome!
                 </p>
               </blockquote>
               <figcaption
-                class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100"
-              >
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100">
                 <div>
                   <div
-                    class="text-lg font-semibold leading-6 text-black font-display"
-                  >
+                    class="text-lg font-semibold leading-6 text-black font-display">
                     Luca Fedrizzi
                   </div>
                   <div class="mt-1 text-sm text-gray-500">
@@ -62,31 +58,17 @@
             </p>
           </blockquote>
           <figcaption
-            class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100"
-          >
+            class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100">
             <div>
+              <div class="text-sm text-gray-500">Be one of us</div>
               <div
-                class="text-lg font-semibold leading-6 text-black font-display"
-              >
-                Be one of us
-              </div>
-              <div class="mt-1 text-sm text-gray-500">
-                Send us your feedback!
+                class="mt-1 text-lg font-semibold leading-6 text-black font-display underline">
+                <a href="https://github.com/lcfd/trak/discussions"
+                  >Send us your feedback!</a
+                >
               </div>
             </div>
-            <div class="overflow-hidden rounded-full bg-gray-50">
-              <!-- <img
-                    alt=""
-                    src=""
-                    width="56"
-                    height="56"
-                    decoding="async"
-                    data-nimg="future"
-                    class="object-cover h-14 w-14"
-                    loading="lazy"
-                    style="color: transparent"
-                  /> -->
-            </div>
+            <div class="overflow-hidden rounded-full bg-gray-50"></div>
           </figcaption>
         </figure>
       </li>
