--- a/src/components/infopages/Privacy.astro
+++ b/src/components/infopages/Privacy.astro
@@ -1,7 +1,6 @@
 <section>
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24"
-  >
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div>
       <div class="relative mx-auto max-w-[40rem] pt-20 pb-24">
         <h1 class="font-extrabold text-5xl text-black font-display">
@@ -14,8 +13,7 @@
     </div>
     <div>
       <div
-        class="mx-auto max-w-[40rem] prose-base prose text-gray-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black"
-      >
+        class="mx-auto max-w-[40rem] prose-base prose text-gray-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black">
         <p>TBD</p>
       </div>
     </div>
