--- a/src/components/infopages/Terms.astro
+++ b/src/components/infopages/Terms.astro
@@ -1,12 +1,10 @@
 <section>
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24"
-  >
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div>
       <div class="relative mx-auto max-w-[40rem] pt-20 pb-24">
         <h1
-          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight"
-        >
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
           Terms and conditions
         </h1>
         <p class="mt-4 text-base leading-7 text-gray-500">
@@ -16,8 +14,7 @@
     </div>
     <div>
       <div
-        class="mx-auto max-w-[40rem] prose-base prose text-gray-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black"
-      >
+        class="mx-auto max-w-[40rem] prose-base prose text-gray-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black">
         <p>TBD</p>
       </div>
     </div>
