--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -2,8 +2,7 @@
   <div class="lg:px-16 max-w-7xl md:px-12 mx-auto px-8 py-24 scroll-mt-12">
     <div class="text-center">
       <h2
-        class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter"
-      >
+        class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
         Always know what you’ll pay,
 
         <span class="lg:block"> transparent pricing for everyone.</span>
@@ -12,22 +11,19 @@
   </div>
   <div class="items-center px-8 lg:pt-12 pb-24 mx-auto max-w-7xl lg:px-16">
     <div
-      class="grid max-w-2xl grid-cols-1 py-4 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-gray-50 lg:border border-gray-500/10 lg:rounded-3xl"
-    >
+      class="grid max-w-2xl grid-cols-1 py-4 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-gray-50 lg:border border-gray-500/10 lg:rounded-3xl">
       <section class="flex flex-col px-6 rounded-3xl lg:py-8">
         <h3 class="mt-5 text-lg text-black font-display">Greedy</h3>
         <p class="mt-2 text-sm text-gray-500">
           Amazing for those attached to money with glue
         </p>
         <p
-          class="order-first text-5xl font-light tracking-tight text-black font-display"
-        >
+          class="order-first text-5xl font-light tracking-tight text-black font-display">
           $0
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
-        >
+          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -77,14 +73,12 @@
           Good for those trying to get there, but are too far from it.
         </p>
         <p
-          class="order-first text-5xl font-light tracking-tight text-black font-display"
-        >
+          class="order-first text-5xl font-light tracking-tight text-black font-display">
           $2
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
-        >
+          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -138,21 +132,18 @@
         >
       </section>
       <section
-        class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black lg:-mt-24 lg:order-none"
-      >
+        class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black lg:-mt-24 lg:order-none">
         <h3 class="mt-5 text-lg text-white font-display">Indie Hacker</h3>
         <p class="mt-2 text-sm text-accent-100">
           Perfect for those leaving 9-5 and working 24/7.
         </p>
         <p
-          class="order-first text-5xl font-light tracking-tight text-white font-display"
-        >
+          class="order-first text-5xl font-light tracking-tight text-white font-display">
           $29
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-white gap-y-3"
-        >
+          class="flex flex-col order-last mt-10 text-sm text-white gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -229,14 +220,12 @@
           For even the biggest enterprise companies.
         </p>
         <p
-          class="order-first text-5xl font-light tracking-tight text-black font-display"
-        >
+          class="order-first text-5xl font-light tracking-tight text-black font-display">
           $99
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
-        >
+          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
