--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -1,7 +1,6 @@
 <section id="features" class="mt-24">
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
-  >
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
     <div class="mx-auto max-w-2xl text-center relative">
       <img
         class="absolute -top-40 md:-top-20 -right-0 md:-right-10 h-40 rotate-180"
@@ -10,12 +9,10 @@
       />
       <div>
         <p
-          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter"
-        >
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
           Features
         </p><p
-          class="mt-4 text-lg max-w-xl mx-auto tracking-tight text-gray-500"
-        >
+          class="mt-4 text-lg max-w-xl mx-auto tracking-tight text-gray-500">
           Not many things, just the ones you need.
         </p>
       </div>
@@ -24,21 +21,18 @@
       <div class="mx-auto max-w-7xl pt-12">
         <h2 class="sr-only">Features.</h2><div>
           <div
-            class="grid gap-12 grid-cols-1 lg:space-y-0 lg:text-center md:grid-cols-3"
-          >
+            class="grid gap-12 grid-cols-1 lg:space-y-0 lg:text-center md:grid-cols-3">
             <div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="terminal-outline"
                     role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Terminal first
                 </p>
               </div>
@@ -51,16 +45,14 @@
             <div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="cloud-offline-outline"
                     role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Offline first
                 </p>
               </div>
@@ -72,16 +64,14 @@
             <div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="stats-chart-outline"
                     role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Reports
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -92,16 +82,14 @@
             <div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="prism-outline"
                     role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Projects
                 </p>
               </div>
@@ -114,16 +102,14 @@
             <div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="code-outline"
                     role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Dev mode
                 </p>
               </div>
