--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -1,7 +1,6 @@
 <section id="getting-started">
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
-  >
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
     <div class="mx-auto max-w-3xl lg:text-center relative">
       <img
         class="absolute -top-40 md:-top-20 left-0 md:-left-10 h-36 md:h-40"
@@ -10,8 +9,7 @@
       />
       <div>
         <p
-          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter"
-        >
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
           Getting started
         </p>
         <p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">
@@ -21,13 +19,11 @@
     </div>
     <div class="mx-auto pt-12">
       <div
-        class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3"
-      >
+        class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
-            >
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -35,8 +31,7 @@
                 role="img"></ion-icon>
             </div>
             <p
-              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
-            >
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               pipx
             </p>
           </div>
@@ -49,8 +44,7 @@
         </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
-            >
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -58,8 +52,7 @@
                 role="img"></ion-icon>
             </div>
             <p
-              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
-            >
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               pip
             </p>
           </div>
@@ -73,8 +66,7 @@
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
-            >
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -82,8 +74,7 @@
                 role="img"></ion-icon>
             </div>
             <p
-              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
-            >
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Nix
             </p>
           </div>
@@ -97,8 +88,7 @@
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
-            >
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -106,8 +96,7 @@
                 role="img"></ion-icon>
             </div>
             <p
-              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
-            >
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Brew
             </p>
           </div>
@@ -117,8 +106,7 @@
               <a
                 class="underline"
                 target="_blank"
-                href="https://github.com/lcfd/trak/issues/14"
-              >
+                href="https://github.com/lcfd/trak/issues/14">
                 Contributions are welcome! 🙏
               </a>
             </span>
@@ -129,20 +117,42 @@
     <div class="mx-auto max-w-3xl lg:text-center relative">
       <div>
         <p class="mt-20 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">
-          Just two <b>commands</b> to start with
+          Just three <b>commands</b> to start with
         </p>
       </div>
     </div>
 
     <div class="mx-auto pt-12">
       <div
-        class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3"
-      >
+        class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              <ion-icon
+                aria-label="scan outline"
+                class="hydrated md h-5 w-5"
+                name="add-circle-outline"
+                role="img"></ion-icon>
+            </div>
+            <p
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
+              Create project
+            </p>
+          </div>
+          <p class="text-gray-500 text-sm mt-4">
+            <span class="block mb-4"
+              >Create a new project that needs some time tracking.
+              <br />
+              It may be the name of your customer or an activity that you love doing.</span
             >
+            <code> trak create project your-project-id</code>
+          </p>
+        </div>
+        <div>
+          <div class="gap-3 lg:inline-flex lg:items-center">
+            <div
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -150,8 +160,7 @@
                 role="img"></ion-icon>
             </div>
             <p
-              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
-            >
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Start
             </p>
           </div>
@@ -163,8 +172,7 @@
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
-            >
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -172,8 +180,7 @@
                 role="img"></ion-icon>
             </div>
             <p
-              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
-            >
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Stop
             </p>
           </div>
