--- a/src/pages/devlog/[...slug].astro
+++ b/src/pages/devlog/[...slug].astro
@@ -19,26 +19,26 @@ const { Content } = await post.render();
 ---
 
 <AstroSeo
-  title="Docs"
-  description="Keep a record of the time you dedicate to your projects"
-  canonical="http://usetrak.com"
+  title={post.data.title}
+  description={post.data.description}
+  canonical={`http://usetrak.com/devlog/${post.slug}`}
   openGraph={{
-    url: "http://usetrak.com",
-    title: "Open Graph Title",
-    description: "Open Graph Description",
+    url: `http://usetrak.com/devlog/${post.slug}`,
+    title: post.data.title,
+    description: post.data.description,
     images: [
       {
         url: "http://usetrak.com/opengraph/social-og.jpeg",
         width: 1200,
         height: 630,
-        alt: "Social open graph",
+        alt: "trak",
         type: "image/jpeg",
       },
       {
         url: "http://usetrak.com/opengraph/twitter-og.jpeg",
         width: 4096,
         height: 4096,
-        alt: "Twitter open graph",
+        alt: "trak",
         type: "image/jpeg",
       },
       { url: "http://usetrak.com/opengraph/social-og.jpeg" },
@@ -56,10 +56,25 @@ const { Content } = await post.render();
   <Navigation />
   <section>
     <div
-      class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24"
-    >
+      class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-16">
+      <div class="max-w-2xl mx-auto">
+        <time
+          class="text-gray-800 text-md"
+          datetime={post.data.date.toISOString()}>
+          {
+            post.data.date.toLocaleDateString("it-IT", {
+              year: "numeric",
+              month: "short",
+              day: "numeric",
+            })
+          }
+        </time>
+        <h1 class="text-5xl font-extrabold max-w-lg mt-4">{post.data.title}</h1>
+        <h2 class="mt-2 text-xl font-bold text-gray-500">
+          {post.data.description}
+        </h2>
+      </div>
       <div class="max-w-2xl prose mt-8 mx-auto">
-        <h1>{post.data.title}</h1>
         <Content />
       </div>
     </div>
