--- a/src/pages/devlog/index.astro
+++ b/src/pages/devlog/index.astro
@@ -11,25 +11,27 @@ console.log(allDevlogPosts);
 
 <AstroSeo
   title="Devlog"
-  description="Keep a record of the time you dedicate to your projects"
-  canonical="http://usetrak.com"
+  description="Announcements and all about time tracking, with and without trak."
+  ,
+  canonical="http://usetrak.com/devlog"
   openGraph={{
-    url: "http://usetrak.com",
-    title: "Open Graph Title",
-    description: "Open Graph Description",
+    url: "http://usetrak.com/devlog",
+    title: "Devlog",
+    description:
+      "Announcements and all about time tracking, with and without trak.",
     images: [
       {
         url: "http://usetrak.com/opengraph/social-og.jpeg",
         width: 1200,
         height: 630,
-        alt: "Social open graph",
+        alt: "trak",
         type: "image/jpeg",
       },
       {
         url: "http://usetrak.com/opengraph/twitter-og.jpeg",
         width: 4096,
         height: 4096,
-        alt: "Twitter open graph",
+        alt: "trak",
         type: "image/jpeg",
       },
       { url: "http://usetrak.com/opengraph/social-og.jpeg" },
@@ -47,24 +49,31 @@ console.log(allDevlogPosts);
   <Navigation />
   <section aria-labelledby="faq-title" id="faq">
     <div
-      class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
-    >
+      class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
       <div>
         <div class="max-w-2xl">
           <p
-            class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight"
-          >
+            class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
             Devlog
           </p>
           <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
-            Mainly announcements but also more generic posts.
+            Announcements about trak and all about time tracking.
           </p>
         </div>
         <div class="mt-12 space-y-12 divide-y-2">
           <div>
             {
               allDevlogPosts.map((post) => (
-                <a href={`/devlog/${post.slug}`}>{post.data.title}</a>
+                <a
+                  class="block border shadow-sm rounded px-3 py-4 hover:bg-sky-50 transition-colors"
+                  href={`/devlog/${post.slug}`}>
+                  {post.data.date.toLocaleDateString("it-IT", {
+                    year: "numeric",
+                    month: "short",
+                    day: "numeric",
+                  })}{" "}
+                  • <span class="font-semibold">{post.data.title}</span> →
+                </a>
               ))
             }
           </div>
