--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,6 @@ import Footer from "../components/global/Footer.astro";
 import { AstroSeo } from "@astrolib/seo";
 ---
 
-<!--
-Use AstroSeo in all the pages you want different Seo than the index page
--->
 <AstroSeo
   title="Home"
   description="Keep a record of the time you dedicate to your projects"
@@ -30,14 +27,14 @@ Use AstroSeo in all the pages you want different Seo than the index page
         url: "http://usetrak.com/opengraph/social-og.jpeg",
         width: 1200,
         height: 630,
-        alt: "Social open graph",
+        alt: "trak",
         type: "image/jpeg",
       },
       {
         url: "http://usetrak.com/opengraph/twitter-og.jpeg",
         width: 4096,
         height: 4096,
-        alt: "Twitter open graph",
+        alt: "trak",
         type: "image/jpeg",
       },
       { url: "http://usetrak.com/opengraph/social-og.jpeg" },
