--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -7,30 +7,27 @@ import Footer from "../components/global/Footer.astro";
 import { AstroSeo } from "@astrolib/seo";
 ---
 
-<!--
-Use AstroSeo in all the pages you want different Seo than the index page
--->
 <AstroSeo
   title="Privacy"
-  description="Keep a record of the time you dedicate to your projects"
-  canonical="http://usetrak.com"
+  description="All you need to know about our privacy management."
+  canonical="http://usetrak.com/privacy"
   openGraph={{
-    url: "http://usetrak.com",
-    title: "Open Graph Title",
-    description: "Open Graph Description",
+    url: "http://usetrak.com/privacy",
+    title: "Privacy",
+    description: "All you need to know about our privacy management.",
     images: [
       {
         url: "http://usetrak.com/opengraph/social-og.jpeg",
         width: 1200,
         height: 630,
-        alt: "Social open graph",
+        alt: "trak",
         type: "image/jpeg",
       },
       {
         url: "http://usetrak.com/opengraph/twitter-og.jpeg",
         width: 4096,
         height: 4096,
-        alt: "Twitter open graph",
+        alt: "trak",
         type: "image/jpeg",
       },
       { url: "http://usetrak.com/opengraph/social-og.jpeg" },
