--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+const { title, keywords } = Astro.props;
 ---
 
 <meta charset="utf-8" />
@@ -7,41 +8,41 @@ import "../styles/global.css";
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="author" content="Michael Andreuzza" />
-<meta
-  name="your keywords"
-  content="wallpaper,black wallpaper, gradient wallpaper,aesthetic wallpaper,iphone wallpaper,wallpaper iphone,white wallpaper,pink wallpaper"
-/>
+<meta name="author" content="trak" />
+<title>{title}</title>
+<meta name="keywords" content={keywords} />
 <!-- Favicon guidelines generated with https://realfavicongenerator.net/ -->
 <link
   rel="apple-touch-icon"
   sizes="180x180"
-  href="/images/favicons/apple-touch-icon.png"
+  href="/apple-touch-icon.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="32x32"
-  href="/images/favicons/favicon-32x32.png"
+  href="/favicon-32x32.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="16x16"
-  href="/images/favicons/favicon-16x16.png"
+  href="/favicon-16x16.png"
 />
-<link rel="manifest" href="/images/favicons/site.webmanifest" />
+<link rel="manifest" href="/site.webmanifest" />
 <link
   rel="mask-icon"
-  href="/images/favicons/safari-pinned-tab.svg"
+  href="/safari-pinned-tab.svg"
   color="#ffffff"
 />
 <meta name="msapplication-TileColor" content="#ffffff" />
 <meta name="theme-color" content="#ffffff" />
 <!--Ionicons -->
 <script
+  is:inline
   type="module"
   src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 
-<!---- Alpine  -->
-<script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
+<!-- Alpine  -->
+<script is:inline defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"
+></script>
