--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -44,8 +44,8 @@
         </a>
         <a
           class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
-          href="/docs">
-          Docs
+          href="https://docs.usetrak.com">
+          Docs ↪
         </a>
         <a
           class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
@@ -55,7 +55,7 @@
         <a
           class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
           href="/devlog">
-          Devlog
+          Devlog 
         </a>
         <div class="inline-flex items-center gap-2 list-none lg:ml-auto">
           <a
