Improve features and add link

--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -118,6 +118,27 @@
                 features and develop without affecting your real data.
               </div>
             </div>
+
+            <!-- Docs -->
+            <div>
+              <div>
+                <div
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  <ion-icon
+                    aria-label="scan outline"
+                    class="hydrated md h-4 w-4"
+                    name="book-outline"
+                    role="img"></ion-icon>
+                </div><p
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
+                  Documentation
+                </p>
+              </div>
+              <div class="mt-4 text-gray-500 text-sm">
+                <a href="https://docs.usetrak.com/" class="font-bold underline">A dedicated site</a> with many
+                guides to help you using this tool.
+              </div>
+            </div>
           </div>
         </div>
       </div>
