--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -117,7 +117,7 @@
     <div class="mx-auto max-w-3xl lg:text-center relative">
       <div>
         <p class="mt-20 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">
-          Just three <b>commands</b> to start with
+          To start you need <b>just three</b> commands
         </p>
       </div>
     </div>
@@ -192,6 +192,16 @@
         <div>
           <div></div>
         </div>
+      </div>
+    </div>
+
+    <div class="mx-auto max-w-3xl lg:text-center relative">
+      <div>
+        <p class="mt-12 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">
+          For more details give a look at the <a class="font-bold underline"
+            href="https://docs.usetrak.com/guides/quick-start/" target="_blank">Quick Start ↪</a
+          > guide.
+        </p>
       </div>
     </div>
   </div>
