--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Navigation from "../components/global/Navigation.astro";
 import Hero from "../components/landing/Hero.astro";
 import SectionOne from "../components/landing/SectionOne.astro";
 import SectionTwo from "../components/landing/SectionTwo.astro";
-import SectionThree from "../components/landing/SectionThree.astro";
+// import SectionThree from "../components/landing/SectionThree.astro";
 
 import Testimonial from "../components/global/Testimonial.astro";
 // import Pricing from "../components/landing/Pricing.astro";
