--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -41,7 +41,7 @@
               need to have Homebrew installed.
             </span>
             <span class="block">
-              <code>brew install tap lcfd/trak/trak</code>
+              <code>brew install lcfd/trak/trak</code>
             </span>
           </p>
         </div>
