Add release v0.0.5 release article
Plus some iprovements here and there

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,6 +1,6 @@
 ---
-const advice = "🎉 v.0.0.4 Released!";
-const advice_link = "/devlog/v-0-0-4-launched";
+const advice = "🎉 v.0.0.5 Released!";
+const advice_link = "/devlog/v005-launched";
 ---
 
 <section>
